--- a/Challenges/Docker/Nginx com Node.js/app/Dockerfile
+++ b/Challenges/Docker/Nginx com Node.js/app/Dockerfile
@@ -9,9 +9,9 @@ RUN apt-get update \
     && wget -O - https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz | tar xzf - -C /usr/local/bin \
     && apt-get autoremove -yqq --purge wget && rm -rf /var/lib/apt/lists/*
 
-RUN npm install express promise-mysql
+# RUN npm install express promise-mysql
 
-COPY index.js .
+# COPY index.js .
 
 EXPOSE 3000
 
