--- a/Challenges/Docker/Nginx com Node.js/docker-compose.yaml
+++ b/Challenges/Docker/Nginx com Node.js/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
     networks:
       - node-network
     tty: true
+    volumes:
+      - ./app:/app
     depends_on:
       - db
   nginx:
@@ -22,6 +24,8 @@ services:
       - node-network
     ports:
       - "8080:80"
+    depends_on:
+      - app
 
   db:
     image: mysql:5.7
